--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>jQuery To-do App</title>
-	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-</head>
-<body>
-
-<div id="container">
-	<h1>To-Do List <i class="fa fa-plus"></i></h1>
-	<input type="text" placeholder="Add a new to-do and hit enter">
-
-	<ul>
-		<li><span class="trash"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
-		<li><span class="trash"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
-		<li><span class="trash"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
-	</ul>
-</div>
-
-<script type="text/javascript" src="assets/js/main.js"></script>
-</body>
+	<head>
+		<title>jQuery To-do App</title>
+		<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
+		
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		
+	</head>
+	<body>
+		<section class="">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+						<div class="content-list">
+							<h1>To-Do List <i class="fa fa-plus"></i></h1>
+							<input type="text" placeholder="Add a new to-do and hit enter">
+							<ul>
+								<li><span class="trash"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="trash"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="trash"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="assets/js/main.js"></script>
+	</body>
 </html>
