Adjusting delete function in js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		
 	</head>
 	<body>
-		<section class="">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
@@ -20,15 +19,16 @@
 							<h1>To-Do List <i class="fa fa-plus"></i></h1>
 							<input type="text" placeholder="Add a new to-do and hit enter">
 							<ul>
-								<li><span class="trash"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
-								<li><span class="trash"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
-								<li><span class="trash"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="delete"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="delete"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="delete"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="delete"><i class="fa fa-trash"></i></span> Do the dishes <span class="edit"><i class="fa fa-edit"></i></span></li>
+								<li><span class="delete"><i class="fa fa-trash"></i></span> Organize the closet <span class="edit"><i class="fa fa-edit"></i></span></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script type="text/javascript" src="assets/js/main.js"></script>
