--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+					<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 						<div class="content-list">
 							<h1>To-Do List <i class="fa fa-plus"></i></h1>
 							<input type="text" placeholder="Add a new to-do and hit enter">
