--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<title>jQuery To-do App</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon" />
-		
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Bootstrap CSS -->
@@ -14,7 +14,7 @@
 	<body>
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
+					<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
 						<div class="content-list">
 							<h1>To-Do List <i class="fa fa-plus"></i></h1>
 							<input type="text" placeholder="Add a new to-do and hit enter">
