Adjusting and indenting index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
@@ -21,8 +21,6 @@
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
-							<li><span class="delete"><i class="fa fa-trash"></i></span> Do the dishes <span class="edit"><i class="fa fa-edit"></i></span></li>
-							<li><span class="delete"><i class="fa fa-trash"></i></span> Organize the closet <span class="edit"><i class="fa fa-edit"></i></span></li>
 						</ul>
 					</div>
 				</div>
@@ -30,7 +28,7 @@
 		</div>
 		<!-- Bootstrap JS -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="assets/js/main.js"></script>
 	</body>
 </html>
