Adding more tasks to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Shop for groceries <span class="edit"><i class="fa fa-edit"></i></span></li>
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Do the laundry <span class="edit"><i class="fa fa-edit"></i></span></li>
 							<li><span class="delete"><i class="fa fa-trash"></i></span> Vacuum <span class="edit"><i class="fa fa-edit"></i></span></li>
+							<li><span class="delete"><i class="fa fa-trash"></i></span> Do the dishes <span class="edit"><i class="fa fa-edit"></i></span></li>
+							<li><span class="delete"><i class="fa fa-trash"></i></span> Walk the dog <span class="edit"><i class="fa fa-edit"></i></span></li>
 						</ul>
 					</div>
 				</div>
